# data-job-market-radar

./: .env.example  .gitignore  pyproject.toml
docs/: api_discovery.md
src/data_job_market_radar/: __init__.py  auth.py  bronze.py  cli.py  config.py  france_travail_client.py  storage.py
src/data_job_market_radar/models/: auth.py  config.py  settings.py  token.py
tests/: test_bronze.py  test_storage.py
